--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "antd-mobile": "^2.3.1",
+    "axios": "^0.19.2",
     "react": "^16.13.0",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -49,5 +51,6 @@
     "less-loader": "^5.0.0",
     "react-app-rewired": "^2.1.5",
     "redux-devtools-extension": "^2.13.8"
-  }
+  },
+  "proxy": "http://127.0.0.1:4300"
 }
