--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.2",
     "js-cookie": "^2.2.1",
@@ -23,6 +25,7 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^2.3.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
