--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.2",
     "js-cookie": "^2.2.1",
+    "rc-queue-anim": "^1.8.4",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
