--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.2",
+    "bufferutil": "^4.0.1",
+    "fibers": "^4.0.2",
     "js-cookie": "^2.2.1",
     "rc-queue-anim": "^1.8.4",
     "react": "^16.13.0",
@@ -26,8 +29,10 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.3.0",
     "socket.io": "^2.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "utf-8-validate": "^5.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
